fix(diary): MCDT-360 align items in title

--- a/src/main/resources/public/sass/global/components/_main.scss
+++ b/src/main/resources/public/sass/global/components/_main.scss
@@ -94,30 +94,29 @@ tr th label input[type=checkbox]:checked + span::before {
   border-color: $white;
 }
 
-.row {
-  width: 100%;
-  .title-area {
-    display: flex;
-    height: 60px;
-    margin-bottom: 10px;
-    img {
-      max-height: 60px;
-      margin-right: 10px;
-    }
-    h1 {
-      flex-shrink: 0;
-      font-size: 36px;
-      font-weight: bold;
-      color: $black;
-      a {
-        color: $black;
-      }
-    }
+.title-area {
+  display: flex;
+  height: 60px;
+
+  img {
+    max-height: 60px;
+    margin-right: 10px;
   }
 
-  .close {
-    cursor: pointer;
+  h1 {
+    flex-shrink: 0;
+    font-size: 36px;
+    font-weight: bold;
+    color: $black;
+
+    a {
+      color: $black;
+    }
   }
+}
+
+.close {
+  cursor: pointer;
 }
 
 
@@ -150,6 +149,7 @@ tr th label input[type=checkbox]:checked + span::before {
     &:disabled {
       cursor: default;
       color: rgba($white, 0.4);
+
       &:hover {
         background-color: $diary-darkgreen;
         color: rgba($white, 0.4);
@@ -349,6 +349,7 @@ span.no-style {
   background: $white;
   padding: 7px;
   vertical-align: middle;
+  width: 100%;
 
   input {
     margin: auto;
@@ -360,6 +361,12 @@ span.no-style {
     input {
       max-width: 75px;
     }
+  }
+}
+.title-buttons {
+  justify-content: flex-end !important;
+  .title-button {
+    margin-bottom: 0;
   }
 }
 
